[tool.poetry]
name = "digital-health"
version = "0.1.0"
description = ""
authors = ["pashupati.hegde@gmail.com"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pandas = "^1.3.4"
numpy = "^1.21.4"
scipy = "^1.7.2"
matplotlib = "^3.4.3"
seaborn = "0.11.1"
scikit-learn = "^1.0.1"
ml-collections = "^0.1.0"
tqdm = "4.56.0"
tensorflow = "^2.7.0"
tensorboard = "^2.7.0"
torch = "1.9.0"
torchtestcase = "^2018.2"
jupyter = "^1.0.0"
ipykernel = "^6.5.0"
jupyter-contrib-nbextensions="^0.5.1"
jupyter_nbextensions_configurator = "^0.4.1"
torchdiffeq = "0.2.0"
TorchDiffEqPack = "^1.0.1"
transforms3d = "0.3.1"
pybullet = "^3.2.0"
wandb = "^0.12.6"
cycler="0.10.0"
docx2txt="0.8"
joblib="0.14.1"
kiwisolver="1.2.0"
pdfminer="20191125"
Pillow="8.2.0"
pycryptodome="3.9.7"
pyEDFlib="0.1.17"
pyparsing="2.4.7"
python-dateutil="2.8.1"
pytz="2020.1"
six="1.14.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
